these commits are not reflecting

--- a/lecturer/lectureVideos.kv
+++ b/lecturer/lectureVideos.kv
@@ -234,7 +234,7 @@
                     halign: 'right'
                     padding_x:20
                     valign: 'center'
-                    on_release: root.stopScreen()
+                    on_release: root.stopScreenWrapper()
                     Image:
                         source:'../imgs/stoprec.png'
                         y:self.parent.y - 20
